# github-bounty-scraper

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  best_threshold.json  bounty_dataset.csv  bounty_dataset_train.csv  bounty_dataset_v2.csv  bounty_dataset_v3.csv  bounty_dataset_v4.csv  bounty_model.pkl  bounty_model.pkl.sha256  bounty_stats.db-shm  bounty_stats.db-wal  bounty_stats_backup.db  cfg_check.txt  coverage_baseline.txt  coverage_final.txt  leads_to_label.txt  open_bounty_programs.json  out.md  output.txt  p.py  pyproject.toml  pytest.ini  requirements.txt  results.json  results_closed.json  results_gitcoin.json  results_historical.json  results_optimized.md  results_optimized_strict.md  results_tuned.json  results_ultra_wide.json  results_wide.json  scraper.py  scraper_config.json  scraper_config_closed.json  signals_config.json  (+6 more)
.github/workflows/: ci.yml
docs/: audit-2026-05-07.md  walkthrough.md
github_bounty_scraper/: __init__.py  __main__.py  bounty.py  cli.py  config.py  core.py  db.py  discovery.py  graphql.py  log.py  model_scorer.py  output.py  price_cache.py  scoring.py  signals.py  telemetry.py  utils.py  vibe.py
models/: bounty_model_manual_v1.pkl  bounty_model_manual_v1.pkl.sha256
scripts/: label_leads.py  rescore_all.py  scrape_priority.py  train_model.py
tests/: conftest.py  test_bounty.py  test_cli.py  test_config.py  test_core.py  test_core_helpers.py  test_core_helpers_2.py  test_core_meta.py  test_core_monolith.py  test_core_monolith_2.py  test_db.py  test_db_2.py  test_db_label.py  test_discovery.py  test_graphql.py  test_graphql_2.py  test_main.py  test_output.py  test_output_2.py  test_price_cache.py  test_scoring.py  test_signals.py  test_signals_2.py  test_signals_3.py  test_vibe.py  test_vibe_2.py  test_vibe_3.py  test_vibe_4.py  test_vibe_5.py  test_vibe_output.py
tools/: analyze_raw.py  balance_dataset.py  clean_spam.py  migrate_db.py  train_bounty_model.py
